2009-10-11  Dmitry Xmelkov  <dmix@gmail.ru>

	* include/avr/sleep.h: Add 'do ... while (0)' for '{}' block macroses.
	* include/avr/power.h: Ditto.

2009-09-14  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #27434.
	* include/avr/boot.h: Add parentheses around vars in inline assembly
	macros. 
	(boot_signature_byte_get) Reformat white space, remove unneeded
	temporary variable.

2009-09-10  Dmitry Xmelkov  <dmix@gmail.ru>

	Apply the patch #6878: eewr_byte.S update for patch #6718
	Thanks to Bob Paddock and Simone Zamboni for the patch.
	* libc/misc/eewr_byte.S: Fix the XMEGA part of code.
	* NEWS: Add item about patch contributed.

2009-08-17  Anitha Boyapati  <anitha.boyapati@atmel.com>

	* include/avr/iox128a1.h: Add '__extension__' to generation of 
	_WORDREGISTER and _DWORDREGISTER macros. Fix for bug #27201
	* include/avr/iox128a3.h: Same.
	* include/avr/iox128d3.h: Same.
	* include/avr/iox16a4.h: Same.
	* include/avr/iox16d4.h: Same.
	* include/avr/iox192a3.h: Same.
	* include/avr/iox256a3.h: Same.
	* include/avr/iox256a3b.h: Same.
	* include/avr/iox32a4.h: Same.
	* include/avr/iox32d4.h: Same.
	* include/avr/iox64a1.h: Same.
	* include/avr/iox64a3.h: Same.

2009-08-15  Anitha Boyapati  <anitha.boyapati@atmel.com>

	Fix for WinAVR bug #2812125. 
	* include/avr/power.h: Define clock prescale register for ATmega16U4. 

2009-08-07  Eric B. Weddington  <eric.weddington@atmel.com>

	* xml/avrgcc-header: Add '__extension__' to generation of _WORDREGISTER
	and _DWORDREGISTER macros in XMEGA header files. This is a partial
	fix for bug #27201.

2009-08-06  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #26840. Thanks to Anitha Boyapati for the patch.
	* include/avr/iom16m1.h: Add DAOE bit name.
	* include/avr/iom32c1.h: Same.
	* include/avr/iom32m1.h: Same.
	* include/avr/iom64c1.h: Same.
	* include/avr/iom64m1.h: Same.

2009-08-04  Eric B. Weddington  <eric.weddington@atmel.com>

	* configure.ac: Add support for ATxmega192D3.